# numthy

./: .gitignore  API.md  CHANGELOG.md  README.md  cli.py  graphs.py  mcp_server.py  numthy.py  pyproject.toml  solve.py
tests/: test_diophantine.py  test_factorization.py  test_lattices.py  test_misc.py  test_systems.py
