# Package ######################################################################

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "numthy"
version = "0.1.0"
description = "Computational number theory. Pure Python. Zero dependencies. Unreasonably fast."
readme = "README.md"
requires-python = ">= 3.10"
authors = [{ name = "Ini Oguntola", email = "ioguntol@gmail.com" }]
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = ["number-theory", "mathematics", "primes", "factorization", "cryptography"]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
cli = ["anthropic>=0.18.0"]
all = ["mcp>=1.0.0", "anthropic>=0.18.0"]

[project.scripts]
numthy = "cli:main"
numthy-mcp = "mcp_server:main"

[project.urls]
Homepage = "https://github.com/ini/numthy"
Documentation = "https://github.com/ini/numthy/blob/main/API.md"
Repository = "https://github.com/ini/numthy"

[tool.setuptools]
py-modules = ["numthy", "cli", "mcp_server", "generate_api"]
